--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 *,
 *::before,
 *::after {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+}
+
+
+.dancing-font {
+  font-family: 'Dancing Script', cursive;
 }
