--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
 *,
 *::before,
 *::after {
@@ -7,17 +7,24 @@
   box-sizing: border-box;
 }
 
-
 .dancing-font {
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
 }
 
 .socials-icon {
   cursor: pointer;
   font-size: 40px !important;
-  
 }
 .socials-icon:hover {
   transform: translateY(-10px);
   transition: all 200ms;
+}
+
+.admin-login-container {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  background: linear-gradient(to right, #1d4350, #a43931);
 }
