Feat: WYSIWYG has been set up

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,9 @@
   z-index: 0 !important;
 }
 /* ----------- DONE ----------- */
+
+/* Giving a fixed height to the WYSIWYG component */
+.ck-content {
+  height: 500px;
+}
+/* ----------- DONE ----------- */
